--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,13 @@
 /* import styles from main stylesheet */
 @import "sakura-vader.css";
+@import "prism-synthwave84.css";
 
 #console {
     padding: .5em 2em 1em;
     border: solid 1px grey;
     margin: 1.5em 0 1em;
+}
+
+body {
+    max-width: 44em;
 }
