change code highlight theme to laserwave

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 /* import styles from main stylesheet */
 @import "sakura-vader.css";
-@import "prism-synthwave84.css";
+@import "prism-laserwave.css";
 
 #console {
     padding: .5em 2em 1em;
