--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #console {
-    padding: .5em 2em 1em;
+    padding: 0 2em 1em;
     border: solid 1px grey;
     border-radius: .5em;
     margin: 1.5em 0 1em;
